--- a/app/templates/new_pitch.html
+++ b/app/templates/new_pitch.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <div id="particles-js">
+    <div id="particles-js" style="background-color: rgb(189, 119, 119)">
       <div class=" row">
     
         <div class="col-md-2"></div>
