--- a/app/templates/post_comment.html
+++ b/app/templates/post_comment.html
@@ -5,7 +5,7 @@
 {%endblock%}
 
 {% block content %}
-<div class="container">
+<div class="container" style="background-color: rgb(161, 74, 74)">
   {{wtf.quick_form(comment_form)}}
 </div>
 {% endblock %}
