--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@ simplemde.css}} {{ simplemde.js }} {% endblock %} {% block navbar %} {% include
 
 <!DOCTYPE html>
 <html>
-  <div class="container">
+  <div class="container" style="background-color:rgb(209, 181, 181)">
     <head>
       <link
         rel="stylesheet"
@@ -13,7 +13,7 @@ simplemde.css}} {{ simplemde.js }} {% endblock %} {% block navbar %} {% include
       <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/css/mdb.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-      <link rel="stylesheet" href="{{url_for('static',filename='index.css') }}" />
+      
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
