--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -2,14 +2,15 @@
  {% import 'macros.html' as macro%}
 
 {% block content %}
-<div class="container">
-<div class="col-md-4">
+
+<div style="background-color: rgb(209, 191, 191)">
+
+<div class="card ml-10">
+  <div class="container">
 <a class="btn btn-primary" href="/category/new-pitch/{{category.id}}">Add a Pitch</a>
-
 <h3 style="font-weight: bold; color: white;">{{category.name}}</h3>
+  </div>
 </div>
-</div>
-
 {% if pitches %}
 <div class="container">
     <div class="col-sm-8 col-md-6" style="color: white;">
@@ -20,6 +21,8 @@
     <div class="container">
     <h4>No Pitches found</h4>
     </div>
+
+</div>
   {% endif %}
 
 {% endblock %}
