--- a/app/templates/new_category.html
+++ b/app/templates/new_category.html
@@ -9,7 +9,7 @@
 {% block conntent %}
 <title> {{ title }} </title>
 
-<div class= "container">
+<div class= "container" style="background-color: rgb(197, 176, 176)">
 
 <div class="column">
 
