--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% import 'macros.html' as macro%} {%block styles%} {{
 super() }} {%endblock%} {% block content %}
-<div class="container">
+<div class="container" style="background-color: rgb(223, 209, 209)">
   <div>
     <h3
       style="
